--- a/LGC-eng.tex
+++ b/LGC-eng.tex
@@ -2,7 +2,7 @@
 \usepackage{csquotes}
 
 \author{Jean-Yves Girard}
-\title{Logic as a geometry of cognition \\ (La Logique comme Géométrie du Cognitif)}
+\title{Logic as a geometry of cognition \\ (La Logique comme Géométrie du Cognitif) \\ Manifest\footnote{}}
 \date{22 March 2004}
 
 \begin{document}
@@ -14,11 +14,27 @@
 \section{The big cemeteries under the moon}
 Replace the philosophy at the center of the scientific activity, restore the philosophy of science, as programme! For this, we propose to reactivate the major tool which constitutes \emph{logic}, by freeing it from the rut of the \enquote{linguistic turn}; this reactivation would be by means of geometry, a \enquote{geometric turn} of a sort. The geometrization becomes possible---and above all necessary---through the eruption of the \emph{cognitive}, which makes obsolete the old paradigm of verismo/dualism/atomism/essentialism inherited from the 20th century, the century of \emph{scientism}.
 
-Scientism seeks answers, while \emph{science} would instead seek questions. Around 1900, one would seek the \enqoute{ultimate solutions}, all questions must find their answers, a little like maidens their husbands. Scientism, which cannot make any mistakes, tackled racial issues in 1904: 80,000 Hereros hanging in Namibia, in the name of eugenics... and it was nothing like the third Reich. And what to say about the final solution to class inequality, the extermination of the \enquote{Koulaks}, in the name of Marxist \enquote{science}, in the early 1930s? The paradigm under our critique is not affiliated with any of the murderous \enquote{-isms} of the past century; but it is fed by the same breast, an unprecedented regression of thought, accompanied by technical progress, also unprecedented.
+Scientism seeks answers, while \emph{science} would instead seek questions. Around 1900, one would seek the \enquote{ultimate solutions}\footnote{}, all questions must find their answers, a little like maidens their husbands. Scientism, which cannot make any mistakes, tackled racial issues in 1904: 80,000 Hereros hanging in Namibia, in the name of eugenics... and it was nothing like the third Reich. And what to say about the final solution to class inequality, the extermination of the \enquote{Koulaks}, in the name of Marxist \enquote{science}, in the early 1930s? The paradigm under our critique is not affiliated with any of the murderous \enquote{-isms} of the past century; but it is fed by the same breast, an unprecedented regression of thought, accompanied by technical progress, also unprecedented.
 
 \section{An equally long absence}
+Last century thus saw an accentuated gap between science and the reflection about science. On the one hand, the (often) excellent scientists who devote themselves to Jivaro reductionism, on the other the (always) cultivated philosphers who imagine themselves being able to talk about science based on data collected (at best) from popular writings. Poles of the same battery, if they are opposite... cheerfully, they agree on the essential: philosophy is not a very serious activity. Tweedledum thinks that it is very nice, but not vital: [???], William of Ockham! Tweedledee sees the scientist as a technician, a kind of cook who prepares the dishes, but whose taste is not good enough to appreciate them fairly.
+
+To say that a scientist does not understand what he does, is a bit steep. The new theories don't all emerge in the same way by natural selection... The scientist \enquote{knows} what he does, even if he expresses it in \enquote{his own way}: thus, often, a scientist superego blurs his message. But it must not fall any more into the inverse excess and pretend that the communication is not a futile activity. Because finally, we have to communicate with colleagues, and especially \emph{with ourselves}; this communication is the methodological reflection which orients the work, puts it in abyss, it is the choice of problems, the supporting directions, and it is well part of \enquote{philosophy}. And, before a fragmentation of knowledge without precedent, the reflection on science becomes a priority, as well for the seasoned \enquote{scholar} as for the beginner who \enquote{enters into science}.
+
+For sure, the time of great \enquote{honest men} is over, there will be no more of Descartes, of Pascal, of Leibniz. The specialization is such that when a scientist dominates the principal branches of his domain, without even making sparks, he passes for a Pico della Mirandola... Extended, but we must plead a sort of \enquote{cultural exception} about the philosophy of science. If there is no longer a philosopher-mathematician-physicist-astronomer, we can dream of a \enquote{mediation} between these irremediably decoupled activities.
+
 \section{The linguistic turn}
+The mediator between science and philosophy, this could be the logician. In fact, logic---with a an etymology too much resembling that of language---would it not define itself as the intersection between science and philosophy? Be that as it may, it is well placed for this---and between us, it is not very original.
+
+This remark underlies the \enquote{linguistic turn} of the past century, a moment of extreme importance. The linguistic turn, in giving to language a leading position, is opposed to \emph{verismo}\footnote{} in its manners, if not convincing, then at least sincere originally. Very quickly the project has found its limits: to reduce everything to properties of language, this is bold and interesting, but it confers on these properties a dubious extraterritoriality. One speaks of \enquote{meta} properties, and of meta-meta, in a manner of a Russian doll, each relieving the next, the turning point is set to... turn in circles, like a broken record, a foundational loop where two turtles are chasing each other and biting the other's tail, believing to advance while they are stuck in place. This is what we call Gödel's theorem of 1931: formally, it registers the failure of \enquote{extraterritoriality}. After this date, the \enquote{turning} is no more, at a conscious level at least, than a purely scholastic, academic activity.
+
+The dominant vision---counter-reform after Gödel's theorem---conforms to Nestorian theology: everything rests on a trinity of Semantics/Syntax/Meta. The Son (or Word) reflects only imperfectly his father (Semantics), this is the incompleteness of the Son as not being of the same substance as the Father. Luckily the Holy Spirit is there, a little rogue, to muddy the waters: it is the Meta, the Polyfilla of cracks in the foundations. This vision has attracted cordial contempt from the scientists, who prefer to pass for overweight Platonists rather than fueling the meta.
+
+The call on the meta returns to admitting the primitive side, resisting at every analysis, logical operations\footnote{}: on layers of verismo (the inevitable call on the theory of sets, seen \emph{infra}) and dualism (the opposition of syntax/semantics) it superimposes a doubtful \emph{essentialism}... After Nestorius, Thomas Aquinas.
+
 \section{Augustine vs Thomas}
+
+
 \section{The cognitive}
 \section{The (anti-)cognitive verismo}
 \section{The information challenge}
