--- a/LGC-eng.tex
+++ b/LGC-eng.tex
@@ -2,14 +2,14 @@
 \usepackage{csquotes}
 
 \author{Jean-Yves Girard}
-\title{Logic as a geometry of cognition \\ (La Logique comme Géométrie du Cognitif) \\ Manifest\footnote{}}
+\title{Logic as a geometry of cognition \\ (La Logique comme Géométrie du Cognitif) \\ Manifest}
 \date{22 March 2004}
 
 \begin{document}
 
 \maketitle
 \noindent
-(Unofficial translation.)
+(Unofficial translation.)\footnote{}
 
 \section{The big cemeteries under the moon}
 Replace the philosophy at the center of the scientific activity, restore the philosophy of science, as programme! For this, we propose to reactivate the major tool which constitutes \emph{logic}, by freeing it from the rut of the \enquote{linguistic turn}; this reactivation would be by means of geometry, a \enquote{geometric turn} of a sort. The geometrization becomes possible---and above all necessary---through the eruption of the \emph{cognitive}, which makes obsolete the old paradigm of verismo/dualism/atomism/essentialism inherited from the 20th century, the century of \emph{scientism}.
@@ -33,9 +33,13 @@ The dominant vision---counter-reform after Gödel's theorem---conforms to Nestor
 The call on the meta returns to admitting the primitive side, resisting at every analysis, logical operations\footnote{}: on layers of verismo (the inevitable call on the theory of sets, seen \emph{infra}) and dualism (the opposition of syntax/semantics) it superimposes a doubtful \emph{essentialism}... After Nestorius, Thomas Aquinas.
 
 \section{Augustine vs Thomas}
+The remedy turns out to be worse than evil, there is something rotten in the longuistic turn. Looking closely, we may distinguish two aspects, one part of which being a \emph{proceduralism} which by nature is closer to existentialism, that of Augustin\footnote{}. The other part is an atomism which would like to reduce complex to simple, big to small: one thinks that a galaxy is made of stars, and not conversely; this atomism has failed in physics, in biology\footnote{}. It is responsible for the essentialist regression, for the prominence of the \enquote{meta} in the \emph{linguistic turn}.
 
+Some logicians, and non the less, thinking about the Gödel/Bernays debate\footnote{}, have an Augustinian position: \enquote{the proof is prior to the thing being proved\footnote{}}, as opposed to the Thomism of Tarski or Kreisel\footnote{}. The Augustinianism in logic consists of a priority toward \emph{protocols}---which are necessarily a little linguistic in nature---but without giving them meaning \emph{a priori}: the meaning appears by polarization, when we focus on certain protocols, by \enquote{breaking the symmetry} so to speak. For an essentialist, the protocol, the formalism, the proof, follows the law, obeys it; the existentialist is more \enquote{western}: he hangs along and judges later, the things are what they are and not what they should be. Why is this trend so small? One must admit, because of the same atomism which has raged elsewhere: we can not give a revolutionary explanation of the world based on three pieces of string, by despising the contributions of real mathematics, of physics, and especially of the quantum. To present a consistent \enquote{Augustinian} point of view, it is necessary that existence preceeds essence, but which existence are we talking about? Surely not that of the 26 letters of the alphabet! Of the quest for geometry.
 
 \section{The cognitive}
+
+
 \section{The (anti-)cognitive verismo}
 \section{The information challenge}
 \section{Set-theoretic atomism}
