--- a/LGC-eng.tex
+++ b/LGC-eng.tex
@@ -28,7 +28,7 @@ The mediator between science and philosophy, this could be the logician. In fact
 
 This remark underlies the \enquote{linguistic turn} of the past century, a moment of extreme importance. The linguistic turn, in giving to language a leading position, is opposed to \emph{verismo}\footnote{} in its manners, if not convincing, then at least sincere originally. Very quickly the project has found its limits: to reduce everything to properties of language, this is bold and interesting, but it confers on these properties a dubious extraterritoriality. One speaks of \enquote{meta} properties, and of meta-meta, in a manner of a Russian doll, each relieving the next, the turning point is set to... turn in circles, like a broken record, a foundational loop where two turtles are chasing each other and biting the other's tail, believing to advance while they are stuck in place. This is what we call Gödel's theorem of 1931: formally, it registers the failure of \enquote{extraterritoriality}. After this date, the \enquote{turning} is no more, at a conscious level at least, than a purely scholastic, academic activity.
 
-The dominant vision---counter-reform after Gödel's theorem---conforms to Nestorian theology: everything rests on a trinity of Semantics/Syntax/Meta. The Son (or Word) reflects only imperfectly his father (Semantics), this is the incompleteness of the Son as not being of the same substance as the Father. Luckily the Holy Spirit is there, a little rogue, to muddy the waters: it is the Meta, the Polyfilla of cracks in the foundations. This vision has attracted cordial contempt from the scientists, who prefer to pass for overweight Platonists rather than fueling the meta.
+The dominant vision---counter-reform after Gödel's theorem---conforms to Nestorian theology: everything rests on a trinity of Semantics/Syntax/Meta. The Son (or Word) reflects only imperfectly his father (Semantics), this is the incompleteness of the Son as not being consubstantial. Luckily the Holy Spirit is there, a little rogue, to muddy the waters: it is the Meta, the Polyfilla of cracks in the foundations. This vision has attracted cordial contempt from the scientists, who prefer to pass for overweight Platonists rather than fueling the meta.
 
 The call on the meta returns to admitting the primitive side, resisting at every analysis, logical operations\footnote{}: on layers of verismo (the inevitable call on the theory of sets, seen \emph{infra}) and dualism (the opposition of syntax/semantics) it superimposes a doubtful \emph{essentialism}... After Nestorius, Thomas Aquinas.
 
@@ -38,7 +38,9 @@ The remedy turns out to be worse than evil, there is something rotten in the lon
 Some logicians, and non the less, thinking about the Gödel/Bernays debate\footnote{}, have an Augustinian position: \enquote{the proof is prior to the thing being proved\footnote{}}, as opposed to the Thomism of Tarski or Kreisel\footnote{}. The Augustinianism in logic consists of a priority toward \emph{protocols}---which are necessarily a little linguistic in nature---but without giving them meaning \emph{a priori}: the meaning appears by polarization, when we focus on certain protocols, by \enquote{breaking the symmetry} so to speak. For an essentialist, the protocol, the formalism, the proof, follows the law, obeys it; the existentialist is more \enquote{western}: he hangs along and judges later, the things are what they are and not what they should be. Why is this trend so small? One must admit, because of the same atomism which has raged elsewhere: we can not give a revolutionary explanation of the world based on three pieces of string, by despising the contributions of real mathematics, of physics, and especially of the quantum. To present a consistent \enquote{Augustinian} point of view, it is necessary that existence preceeds essence, but which existence are we talking about? Surely not that of the 26 letters of the alphabet! Of the quest for geometry.
 
 \section{The cognitive}
+But while some are sleeping..., the evening stone turns in its [...]\footnote{}: but not in circles, insensitively, it puts itself to point in another direction, the \emph{cognitive}.
 
+If verismo supposed a strict segregation between object and subject, we may define \emph{a contrario} the cognitive as the objectivization of the subject, which becomes an object as part of the whole. So, the human brain does not appear as more than an artifact of chemistry, realizing in an approximate fashion an ideal subject, it is the Subject himself, consubstantial with the object: the cognitive is not Nestorian. In the cognitive, we find ourselves among words like \enquote{I know}, \enquote{I believe}, with the conditional, with the distinction between perfect/imperfect... But it is always the physics of the 20th century which was cognitive. Already chaos (Poincaré) announced a \emph{practical} impossibility, that of predicting lottery drawings, or more nobly the long-term evolution of the solar system. Then relativity restrained (Einstein, 1905) derealized time and space, the mass. But, after all, Galilean mechanics was already a form of relativism, and, [...?] 21st century, well before 1917, Riemann had had the intuition of general relativity. As for the quantum (Heisenberg \& al, 1925), it no longer simply attacks the \emph{feasibility} of measurement, or absolute character of the result, it refuses until the object has been measured, it is the \emph{uncertainty principle}, which [...]
 
 \section{The (anti-)cognitive verismo}
 \section{The information challenge}
