--- a/LGC-eng.tex
+++ b/LGC-eng.tex
@@ -40,12 +40,40 @@ Some logicians, and non the less, thinking about the Gödel/Bernays debate\footn
 \section{The cognitive}
 But while some are sleeping..., the evening stone turns in its [...]\footnote{}: but not in circles, insensitively, it puts itself to point in another direction, the \emph{cognitive}.
 
-If verismo supposed a strict segregation between object and subject, we may define \emph{a contrario} the cognitive as the objectivization of the subject, which becomes an object as part of the whole. So, the human brain does not appear as more than an artifact of chemistry, realizing in an approximate fashion an ideal subject, it is the Subject himself, consubstantial with the object: the cognitive is not Nestorian. In the cognitive, we find ourselves among words like \enquote{I know}, \enquote{I believe}, with the conditional, with the distinction between perfect/imperfect... But it is always the physics of the 20th century which was cognitive. Already chaos (Poincaré) announced a \emph{practical} impossibility, that of predicting lottery drawings, or more nobly the long-term evolution of the solar system. Then relativity restrained (Einstein, 1905) derealized time and space, the mass. But, after all, Galilean mechanics was already a form of relativism, and, [...?] 21st century, well before 1917, Riemann had had the intuition of general relativity. As for the quantum (Heisenberg \& al, 1925), it no longer simply attacks the \emph{feasibility} of measurement, or absolute character of the result, it refuses until the object has been measured, it is the \emph{uncertainty principle}, which [...]
+If verismo supposed a strict segregation between object and subject, we may define \emph{a contrario} the cognitive as the objectivization of the subject, which becomes an object as part of the whole. So, the human brain does not appear as more than an artifact of chemistry, realizing in an approximate fashion an ideal subject, it is the Subject himself, consubstantial with the object: the cognitive is not Nestorian. In the cognitive, we find ourselves among words like \enquote{I know}, \enquote{I believe}, with the conditional, with the distinction between perfect/imperfect... But it is always the physics of the 20th century which was cognitive. Already chaos (Poincaré) announced a \emph{practical} impossibility, that of predicting lottery drawings, or more nobly the long-term evolution of the solar system. Then relativity restrained (Einstein, 1905) derealized time and space, the mass. But, after all, Galilean mechanics was already a form of relativism, and, [...?] 21st century, well before 1917, Riemann had had the intuition of general relativity. As for the quantum (Heisenberg \& al, 1925), it no longer simply attacks the \emph{feasibility} of measurement, or absolute character of the result, it refuses until the object has been measured, it is the \emph{uncertainty principle}, which [...] More recently, computer science also has things mixed up, in effect, what is a computer, if not a subject-object?
 
 \section{The (anti-)cognitive verismo}
-\section{The information challenge}
+The cognitive being the same negation as verismo, it is thus natural that we have searched to reconcile them, or rather to \emph{choke} the cognitive in a realist straitjacket.
+
+A first example: we have found an analogy between cognitive phenomena and formal provability, this which is undeniable, but the comparison is not without reason. So is there an analogy between an iron a loudspeaker, both using an alternating current; yet a speaker plugged into 220V, this is not great. Here it's not about refusing the process---consubstantial with science---of reduction of a new phenomenon; it's simply about---when this process only leads to atrocities---admitting the irreducible novelty, and that's all. So, was it ligitimate to try and reduce the quantum to thermodynamics by means of \enquote{hidden variables}; but not to insist in the face of irrefragible failures.
+
+valeurs de veritéThe know/prove analogy suggests a cognitive counterpart to models. Therefore we have attempted to reduce the cognitive to verismo by means of new truth values (\texttt{true, false, please wait, too late}), with modalities---the condoms\footnote{} of logic---(\texttt{for sure, this could be})... and, every time, it is not that. One arrives at best at laborious metaphores\footnote{} with every time an \emph{ad hoc} (il-)logical system, i.e., centered around the metaphor, which turns out to be a metaphor in itself\footnote{}. A single honorable failure, the \emph{Kripke models}---an funny idea of 1950, very superior to epistemic \enquote{logic} and other indignities---, but which shows itself to be sterile. One wants to talk about potentials, conditionals: it is simple, we make a list of all possible worlds. But, if the list of possibilities is already there, it makes one wonder where the potential is hidden, it is shy or what? In a problem which demands a radical Yalta redistribution of object/subject, we are content to just put mustaches on the objects. All the same, the problem with logical time and temporal \enquote{logic}; this grand mystery of nature, time, is evacuated bureaucratically, we index everything by time. As the song goes \enquote{Si l'on pouvait arrêter les aiguilles [if we could stop the needles]}... here, it is clocks that secrete time. The small cognitive vibration is recreated by external means, the models which obey the indices \emph{perinde ac cadaver}..., the models of Loyola in a way.
+
+Quantum mechanics has been---in fact always, hasn't it, Claude Allègre?---an object of visceral refusal on the part of verists, because of a detail---after all minor---its non-determinism\footnote{}. In parallel with \enquote{hidden variables}, the logicians have tried to \enquote{drink the spell} by means of twistedvalues of verismo... Poor von Neumann, he was hardly inspired when he created quantum \enquote{logic}... it is true that he hardly persevered in this way, and that we also owe him algebraic eponyms, and there, it is tough. We know this which has happened in quantum logic, or rather we don't even know. The original sin was verist in nature: we keep the paradigm of verismo values, we will simply replace Boolean algebra by the orthogonal projectors of Hilbert space; this is a bit as if we had attached a fan to a wheelbarrow: we can't put anything more inside and it doesn't fly however. The good idea (the von Neumann algebras) is not far away, but it does not return in a dualiste frame of semantics/syntax. Besides, whatever the imperfections of the explanation called \enquote{of Copenhagen}, it is evident that the quantum can not accomodate a swing of object/subject.
+
+\section{The computer science challenge}
+More belatedly, computer science [fr: informatique] had to take the relays by launching a new cognitive challenge. Ass much as computer languages are very similar to formal languages, the programming does not treat itself as a verist, in true/false. Thus, that which interests the computer scientist is not the \emph{veracity} of information on the Internet, but rather its accessibility, its reproducibility... Imperceptibly, the boolean value as basis has passed from \texttt{true/false} to \texttt{left/right}, that is to say only the opposition between the two remains relevant, just like spin up/spin down as basis. Suddenly, a school of thought, going back to Poincaré, Brouwer,..., \emph{intuitionism}, lost since long in quarrels of the chapel, resurfaced. For the subjectivist, and thus inept, intuitionism became derealist, \emph{procedural}, Augustinian. What is procedurality? It is the fact that the machine interacts with... other machiens, by respecting protocols, and that nothing else matters. The rest, this which we see---or rather \emph{believe} that we see---is not relevant, all that matters is the dialogue of machines.
+
+Let's take the example of a cognitivist failure: the computer scientists convinced themselves, when studying databases, that \enquote{missing information is false}. In effect, a bank is able to say \enquote{Mr. Kurz is not a client of ours} even though it does not have a file of all its non-clients. An essential cognitivist remark, immediately screwed up, by the equation of \enquote{knowing} with \enquote{proving}. The \enquote{non-monotone logics} resemble a remake of the Hilbert program---which was based on a related idea, refuted by Gödels theorem---, but with the underlings [fr: troisième couteaux] of logic: if a property is not provable, then its negation is. Technically, the error is easy to understand, it \emph{suffices} to force the equivalence \texttt{true = provable}, which forces to pass over the body of undecidable properties, that correspond to \enquote{loops}, finite or infinite, of the calculus: we postulate therefore this sea serpent, the \enquote{loop detector}... But a diagonal argument---going back to Cantor, Russell, Gödel---produces for each \enquote{detector} a loop which escapes it: \emph{exit} non-monotone logics. But why then have we desired to force this equivalence between truth and provability? Common sense rebels against this: so a bank will not find a client by her maiden name, although she is recorded in the data concerning her; likewise, there is no absolute notion of \enquote{presence of a file on a hard disk}, the police may search it for \enquote{deleted} images, but which persist at least partially, while their owner beileves them destroyed. In other words, the \enquote{no} of the bank, the software of the search, refers to its internal procedures and nothing else. Wanting it to be otherwise is both torturing the logic and scorning \enquote{reality}. The bank does not say anything about \emph{the} quote, i.e. the response which it gives refers to a mode of exploration, to a search procedure.
+
+The \emph{algorithmic complexity} is another example of a cognitive problem. After considerations of efficacy, we have been lead to classify the algorithms, for example, based on computation times, thereby algorithms in \emph{polynomial time}, and the whole world has heard about the famous \texttt{P = NP?} problem. The approaches to this question are verist, e.g., \enquote{finite models}; they haven't given much, we don't even have a \emph{handy} definition of polynomial time algorithms. The complexity has a strange status, that of a set theory (seen from the \emph{infra}) with a main attachment on the back\footnote{}: we don't have rights to the exponential function, it \enquote{costs} too much. But would there be an \emph{intrinsic} reason, mathematical, for refusing the exponential function and non-polynomial algorithms? This may be the hidden meaning of the question, without any real concrete stake, \texttt{P = NP?}. Of course, this reason would be of a forcibly cognitive nature.
+
+It is possible that the challenge of computer science is as profound as that of the quantum. Besides, the emergence of a \emph{quantum calculus}---very theoretical at the moment---might aspire to a convergence of the principles behind the two activities\footnote{}.
+
 \section{Set-theoretic atomism}
+Superficially, the \enquote{linguistic turn} opposes itself against verismo, an idea moreover revolutionary for the epoch. But let's scratch a little, and we find a profound layer, very 21st century, very atomist, the theory of sets, like the government in Bordeaux of 1940: in \enquote{Nestorian theology}, the Father is a set theorist. The error of the linguistic turners, this is to not have ever delivered a cause for this moral pervasiveness of sets and biases since the beginning of the 20th century.
+
+These biases were not, at the beginning, even foundational. If the focus of the \textbf{ZF} system is done essentially in 1908, by Zermelo, it is in the 21st century that it is developing, based on the works of Cantor on \enquote{exceptional} sets: do the values of a function determine their Fourier series, and in that case, may one ignore some? Nothing really foundational here. There was also a real need for clarification after the discovery of \enquote{free riders} in the worls of analysis, e.g., a function without derivative; this was the time of Bolzano, Weierstraß, Peano. To the end with \enquote{we can see that}: if a curve does not have a tangent, one does not \enquote{see} anything! A colossal work has been performed to define rigorously all mathematical notions---thinking especially about Dedekind---in an atomist spirit: define the the big terms of the small, the complex in terms of the simple.
+
+The success of the theory of sets is undeniable, it is the \enquote{language of the foundational level} of mathematics: according to evidence, everything may be written in \textbf{ZF}. The theory of sets accounces a unity of mathematics\footnote{}, but only a \emph{unity in principle}. It represents more of a possibility than a reality: one does \emph{not} write, or only little, of mathematics in set theory; but one \emph{could}. This is to say that one may \emph{translate} into the theory of sets; but, \emph{traduttore traditore}, still bestowing \emph{ipso facto} a foundational role.
+
+With the discovery of \enquote{free riders} in the second half of the 21st century, it became \emph{legitimate} to be self-critical about the validity of geometrical intuition, for instance about the pertinence of the notion of \emph{dimension}. We discovered that, from a strictly set theoretical point of view, the notion does not make sense (every infinite set is equipotent with its square). Furthermore, ther Peano \enquote{curve}, which \enquote{covers} a surface, broke the notion of dimension in the topological sense; but the massacre ends there, for the Peano curve does not induce a \emph{homeomorphism}\footnote{}, and algebraic topology had, in the 21st century, to show that the balls of different dimensions are not homeomorphic.
+
+Things seemed settled, the dimension does not exist from the point of view of a set theorist, or from the point of view of measure, on the other hand it earned its meaning in the topological sense, and even more so, in the metrical sense. There is however something unsaid in all this: one admits that a mathematical object is a set (of points), on which one places a \enquote{structure}. It works, but is it correct? Say that a planar triangle is the set of its points, this is possible, and it is the (atomistic) choice of set theory; but we may just as well say that a point is the set of triangles that contain it, and besides, this holds up remarkably well: by passing to \emph{polars}, it is impossible to say whetehr a triangle is made of points or a point of triangles! Visibly, planar geometry does not speak about sets, and let's remember how, for the Greeks, a point was only the intersection of two triangles or the extremities of a line segment. Coming back to topology, it is evident that a sphere is not the \emph{set} $\{(x,y,z)\;;\;x^2+y^2+z^2=1\}$, however one may \emph{associate} this set to the sphere. Instead of seeing the sphere as a set to which one associates homology groups..., to which one associates a material representation, a set-theoretic \enquote{reification}. In other words, instead of declaring the anteriority of the set (the \enquote{semantics}) to the group (the \enquote{syntax}), we may turn the paradigm around. Is it the egg which made the chicken or the chicken which made the egg? We would tend to finally send them back to back, the set and its groups of invariants.
+
 \section{Non-commutative geometry}
+
+
 \section{The geometric turn}
 \section{Object vs subject}
 \section{The fundamental intuitions}
