--- a/LGC-eng.tex
+++ b/LGC-eng.tex
@@ -72,9 +72,16 @@ With the discovery of \enquote{free riders} in the second half of the 21st centu
 Things seemed settled, the dimension does not exist from the point of view of a set theorist, or from the point of view of measure, on the other hand it earned its meaning in the topological sense, and even more so, in the metrical sense. There is however something unsaid in all this: one admits that a mathematical object is a set (of points), on which one places a \enquote{structure}. It works, but is it correct? Say that a planar triangle is the set of its points, this is possible, and it is the (atomistic) choice of set theory; but we may just as well say that a point is the set of triangles that contain it, and besides, this holds up remarkably well: by passing to \emph{polars}, it is impossible to say whetehr a triangle is made of points or a point of triangles! Visibly, planar geometry does not speak about sets, and let's remember how, for the Greeks, a point was only the intersection of two triangles or the extremities of a line segment. Coming back to topology, it is evident that a sphere is not the \emph{set} $\{(x,y,z)\;;\;x^2+y^2+z^2=1\}$, however one may \emph{associate} this set to the sphere. Instead of seeing the sphere as a set to which one associates homology groups..., to which one associates a material representation, a set-theoretic \enquote{reification}. In other words, instead of declaring the anteriority of the set (the \enquote{semantics}) to the group (the \enquote{syntax}), we may turn the paradigm around. Is it the egg which made the chicken or the chicken which made the egg? We would tend to finally send them back to back, the set and its groups of invariants.
 
 \section{Non-commutative geometry}
+This observation is rendered a bit obsolete by \emph{non-commutative geometry}. The classical example is that of a \emph{torus} i.e. a mathematical air chamber; if we cut with scissors and follow a constant orientation, the result will depend on the angle of attack: if it is badly chosen (most common case) we never finish cutting the torus into a strip ever so thin; in other works we create a dense trajectory i.e. which seems to pass everywhere, whereas it is not a \enquote{Peano curve}. As if the torus was \enquote{too tight}, as if it ran out of points. But wemay not find the \enquote{missing points}, and it is the same idea of toroidal set which we have to question, to introduce non-set-theoretic, \enquote{non-commutative}, toruses says Connes. Technically speaking, a torus in the usual sense may be seen as the space of \enquote{smooth} functions, which is a commutative algebra. If we omit the commutativity, the algebras remain manipulable, but they don't come from a \enquote{real} variety like the torus, they are not \enquote{reifiable}.
 
+This example should suffice to convince us that we are attesting a real expulsion of sets and the beginning of a new foundational approach, a harmony with the quantum miracle. As a matter of fact, Grothendieck in his time has already intended to expell sets to the benefit of \emph{categories}: sadly his \emph{topoi} are \enquote{reifiable}, i.e., they still have a \enquote{natural} set-theoretic substrate, that which we could not find for the algebras of operators.
+
+
+But \emph{what} about the \emph{commutative}? Operators commute when they are \enquote{diagonalized} by a common \enquote{basis}\footnote{}. The unsaid common in logic, in the theory of sets, of categories, is the implicit agreement on such a \enquote{basis}. All these beautiful things, sets, elements, proofs, models, language, objects, morphisms, functions, arguments... \enquote{commute}. We don't agree on anything, except on this basic, set-theoretic \enquote{arena}, where everything is played out, everything is measured. Everyone is thus based on the same location, but let's imagine a chock that shifts the gyroscopes... the questions no longer fall exactly on their answers, the marbles in their boxes. However, if logic is also Augustinian like the physical world, the interaction takes place despite the absence of a formal status. In physics, we know that it happens by means of the \emph{reducion of the wave packet}. This is what to import into logic to spice up the object/subject relation!
 
 \section{The geometric turn}
+
+
 \section{Object vs subject}
 \section{The fundamental intuitions}
 \section{Did God make the integers?}
