change quotation style

--- a/LGC-eng.tex
+++ b/LGC-eng.tex
@@ -1,5 +1,6 @@
 \documentclass{article}
-\usepackage{csquotes}
+\usepackage[T1]{fontenc}
+\usepackage[style=french]{csquotes}
 
 \author{Jean-Yves Girard}
 \title{Logic as a geometry of cognition \\ (La Logique comme Géométrie du Cognitif) \\ Manifest}
@@ -35,7 +36,7 @@ The call on the meta returns to admitting the primitive side, resisting at every
 \section{Augustine vs Thomas}
 The remedy turns out to be worse than evil, there is something rotten in the longuistic turn. Looking closely, we may distinguish two aspects, one part of which being a \emph{proceduralism} which by nature is closer to existentialism, that of Augustin\footnote{}. The other part is an atomism which would like to reduce complex to simple, big to small: one thinks that a galaxy is made of stars, and not conversely; this atomism has failed in physics, in biology\footnote{}. It is responsible for the essentialist regression, for the prominence of the \enquote{meta} in the \emph{linguistic turn}.
 
-Some logicians, and non the less, thinking about the Gödel/Bernays debate\footnote{}, have an Augustinian position: \enquote{the proof is prior to the thing being proved\footnote{}}, as opposed to the Thomism of Tarski or Kreisel\footnote{}. The Augustinianism in logic consists of a priority toward \emph{protocols}---which are necessarily a little linguistic in nature---but without giving them meaning \emph{a priori}: the meaning appears by polarization, when we focus on certain protocols, by \enquote{breaking the symmetry} so to speak. For an essentialist, the protocol, the formalism, the proof, follows the law, obeys it; the existentialist is more \enquote{western}: he hangs along and judges later, the things are what they are and not what they should be. Why is this trend so small? One must admit, because of the same atomism which has raged elsewhere: we can not give a revolutionary explanation of the world based on three pieces of string, by despising the contributions of real mathematics, of physics, and especially of the quantum. To present a consistent \enquote{Augustinian} point of view, it is necessary that existence preceeds essence, but which existence are we talking about? Surely not that of the 26 letters of the alphabet! Of the quest for geometry.
+Some logicians, and non the less, thinking about the Gödel/Bernays debate\footnote{}, have an Augustinian position: \enquote{the proof is prior to the thing being proved\footnote{}}, as opposed to the Thomism of Tarski or Kreisel\footnote{}. The Augustinianism in logic consists of a priority toward \emph{protocols}---which are necessarily a little linguistic in nature---but without giving them meaning \emph{a priori}: the meaning appears by polarization, when we focus on certain protocols, by \enquote{breaking the symmetry} so to speak. For an essentialist, the protocol, the formalism, the proof, follows the law, obeys it; the existentialist is more \enquote{western}\footnote{}: he hangs along and judges later, the things are what they are and not what they should be. Why is this trend so small? One must admit, because of the same atomism which has raged elsewhere: we can not give a revolutionary explanation of the world based on three pieces of string, by despising the contributions of real mathematics, of physics, and especially of the quantum. To present a consistent \enquote{Augustinian} point of view, it is necessary that existence preceeds essence, but which existence are we talking about? Surely not that of the 26 letters of the alphabet! Of the quest for geometry.
 
 \section{The cognitive}
 But while some are sleeping..., the evening stone turns in its [...]\footnote{}: but not in circles, insensitively, it puts itself to point in another direction, the \emph{cognitive}.
@@ -80,7 +81,7 @@ This example should suffice to convince us that we are attesting a real expulsio
 But \emph{what} about the \emph{commutative}? Operators commute when they are \enquote{diagonalized} by a common \enquote{basis}\footnote{}. The unsaid common in logic, in the theory of sets, of categories, is the implicit agreement on such a \enquote{basis}. All these beautiful things, sets, elements, proofs, models, language, objects, morphisms, functions, arguments... \enquote{commute}. We don't agree on anything, except on this basic, set-theoretic \enquote{arena}, where everything is played out, everything is measured. Everyone is thus based on the same location, but let's imagine a chock that shifts the gyroscopes... the questions no longer fall exactly on their answers, the marbles in their boxes. However, if logic is also Augustinian like the physical world, the interaction takes place despite the absence of a formal status. In physics, we know that it happens by means of the \emph{reducion of the wave packet}. This is what to import into logic to spice up the object/subject relation!
 
 \section{The geometric turn}
-
+This expression should not be taken as a rejection of the linguistic turn, to which we owe the fundamental advances. It is more of a reform, after the fossilisation that we have talked about. The linguistic idea is excellent, it is the first step of any derealisation, but as any ideology it has its cellars, its non-spoken subliminals. And here the unspoken relates to meaning. Without truly admitting it, we have supposed that language came out 
 
 \section{Object vs subject}
 \section{The fundamental intuitions}
